# mvhg

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  build.sh  pyproject.toml
include/: mvhg.hpp
mvhg/: __init__.py  mvhg.py
notebooks/: demo.ipynb  example.ipynb
src/: mvhg.cpp  pybind11.cpp
